--- a/Tests/Docker-compose/postgres.yaml
+++ b/Tests/Docker-compose/postgres.yaml
@@ -5,7 +5,7 @@ services:
     container_name: postgres
     image: postgres:16-alpine
     networks:
-      - evolution-net
+      - network_compose_public
     command: ["postgres", "-c", "max_connections=1000"]
     restart: always
     ports:
@@ -25,7 +25,7 @@ services:
       postgres:
         condition: service_started 
     networks:
-      - evolution-net
+      - network_compose_public
     environment:
       - PGADMIN_DEFAULT_EMAIL=carlosjuatan.workplace@gmail.com
       - PGADMIN_DEFAULT_PASSWORD=8QgBLp5YT8vGTUL689Ic  
@@ -42,6 +42,6 @@ volumes:
 
 
 networks:
-  evolution-net:
-    name: evolution-net
+  network_compose_public:
+    name: network_compose_public
     driver: bridge
