--- a/Tests/Docker-compose/rabbitmq.yaml
+++ b/Tests/Docker-compose/rabbitmq.yaml
@@ -15,13 +15,13 @@ services:
       - 5672:5672
       - 15672:15672
     networks:
-      - evolution-net
+      - network_compose_public
 
 volumes:
   rabbitmq_data:
 
 
 networks:
-  evolution-net:
-    name: evolution-net
+  network_compose_public:
+    name: network_compose_public
     driver: bridge
