testando uma nova forma de conetar tudo usando o traefik

--- a/docker-compose-traefik/.env
+++ b/docker-compose-traefik/.env
@@ -20,3 +20,7 @@ GLOBAL_API_KEY=uQKFOUgnAwx13mjmRsM8
 postgres_evolution_db=evolution
 postgres_evolution_user=evolution_api_user
 postgres_evolution_password=KR0k249haJgXCXcxSSwo
+
+# Chatwoot
+SECRET_KEY_BASE=rr9sIy12oufBeYnpgHcP
+POSTGRES_PASSWORD=KR0k249haJgXCXcxSSwo
