--- a/docker-compose-traefik/stacks/chatwoot-admin.yml
+++ b/docker-compose-traefik/stacks/chatwoot-admin.yml
@@ -30,16 +30,9 @@ services:
     command: bundle exec rails s -p 3000 -b 0.0.0.0
     # entrypoint para configurar o aplicativo
     entrypoint: docker/entrypoints/rails.sh
-    # configura os volumes do chatwoot
-    volumes:
-      # Os volumes externos (previamente criados ou gerenciados pelo Docker Compose)
-      - chatwoot_data:/app/storage # arquivos do usuário
     # configura a rede do serviço
     networks:
-      # Conecta à mesma rede pública que o seu chatwoot e Postgres
-      network_compose_public:
-        aliases:
-          - chat4.${DOCKER_BASE_URL}
+      - network_compose_public
     # Configura as variáveis de ambiente do chatwoot
     environment:
       ##########################################
@@ -150,6 +143,14 @@ services:
       - CW_API_ONLY_SERVER=false
     # A seção 'deploy' é removida para Docker Compose (não é Swarm)
     # As labels do Traefik são mantidas caso você tenha um Traefik rodando externamente
+    # configura os volumes do chatwoot
+
+      # configuração de certificado
+      - SSL_CERT_FILE=/usr/local/share/ca-certificates/rootCA.pem
+      # Os volumes externos (previamente criados ou gerenciados pelo Docker Compose)
+    volumes:
+      - chatwoot_data:/app/storage # arquivos do usuário
+      - ca_certs_volume:/usr/local/share/ca-certificates/:ro
     labels:
       # Configura o Roteamento do Traefik
       - traefik.enable=true
@@ -178,6 +179,9 @@ services:
 volumes:
   chatwoot_data:
     name: chatwoot_data
+    external: true
+  ca_certs_volume:
+    name: ca_certs_volume
     external: true
 
 networks:
