--- a/docker-compose-traefik/stacks/n8n-webhooks.yml
+++ b/docker-compose-traefik/stacks/n8n-webhooks.yml
@@ -7,13 +7,11 @@ services:
     restart: unless-stopped
     command: webhook # comando padrão para subir o servidor web
     networks:
-      network_compose_public:
-        aliases:
-          # O alias é útil para comunicação interna entre containers,
-          # mas o acesso externo será via Traefik e DOCKER_BASE_URL
-          - webhooks.${DOCKER_BASE_URL}
+      - network_compose_public
     environment:
       
+    volumes:
+      - ca_certs_volume:/usr/local/share/ca-certificates/:ro
     # Configura o Modo de Deploy da Aplicação
     deploy:
       # O editor será executado no modo de replicação
@@ -58,6 +56,11 @@ services:
       - traefik.http.services.n8n_webhook.loadbalancer.server.port=5678
       # Define o uso do Host Header
       - traefik.http.services.n8n_webhook.loadbalancer.passHostHeader=true
+
+volumes:
+  ca_certs_volume:
+    name: ca_certs_volume
+    external: true
 
 networks:
   network_compose_public:
