--- a/docker-compose-traefik/traefik-ssl.toml
+++ b/docker-compose-traefik/traefik-ssl.toml
@@ -1,9 +1,27 @@
 [tls]
+  [tls.stores]
+    [tls.stores.default]
+      [tls.stores.default.defaultCertificate]
+        certFile = "/certs/cert.pem"
+        keyFile = "/certs/key.pem"
+  
+  [[tls.certificates]]
+    certFile = "/certs/chat4.codesefaz.local.pem"
+    keyFile = "/certs/chat4.codesefaz.local-key.pem"
 
-[tls.stores]
+  [[tls.certificates]]
+    certFile = "/certs/brow.codesefaz.local.pem"
+    keyFile = "/certs/brow.codesefaz.local-key.pem"
 
-[tls.stores.default]
+  [[tls.certificates]]
+    certFile = "/certs/evo.codesefaz.local.pem"
+    keyFile = "/certs/evo.codesefaz.local-key.pem"
 
-[tls.stores.default.defaultCertificate]
-certFile = "/certs/cert.pem"
-keyFile = "/certs/key.pem"
+  [[tls.certificates]]
+    certFile = "/certs/workflows.codesefaz.local.pem"
+    keyFile = "/certs/workflows.codesefaz.local-key.pem"
+  
+  
+  [[tls.certificates]]
+    certFile = "/certs/webhooks.codesefaz.local.pem"
+    keyFile = "/certs/webhooks.codesefaz.local-key.pem"
