--- a/docker-compose-traefik/stacks/n8n-workers.yml
+++ b/docker-compose-traefik/stacks/n8n-workers.yml
@@ -10,6 +10,8 @@ services:
       - network_compose_public
     environment:
       
+    volumes:
+      - ca_certs_volume:/usr/local/share/ca-certificates/:ro
     # Configura o Modo de Deploy da Aplicação
     deploy:
       # O editor será executado no modo de replicação
@@ -34,6 +36,11 @@ services:
         order: start-first
         # Configura a ação em caso de falha
         failure_action: rollback
+
+volumes:
+  ca_certs_volume:
+    name: ca_certs_volume
+    external: true
 
 networks:
   network_compose_public:
